--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,9 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.1",
+    "moongose": "^1.0.0",
     "netflix": "file:",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "react-hot-toast": "^2.4.1"
   }
 }
